[gd_scene load_steps=11 format=3 uid="uid://0uuiimj7834t"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_2eusb"]
[ext_resource type="PackedScene" uid="uid://fy7mejvsl646" path="res://ui/health_bar.tscn" id="2_7d51a"]
[ext_resource type="PackedScene" uid="uid://cvqndeuy7v0gb" path="res://ui/super_bar.tscn" id="3_8pa78"]
[ext_resource type="Theme" uid="uid://h2qn3r626o1h" path="res://ui/ui_theme.tres" id="3_ainlw"]
[ext_resource type="Texture2D" uid="uid://bvruc8kcjdmrq" path="res://ui/timer_background.png" id="4_xeyvx"]
[ext_resource type="PackedScene" uid="uid://c5bx8rtodfp1x" path="res://ui/win_indicator.tscn" id="6_p4tyy"]
[ext_resource type="AudioStream" uid="uid://c3nyty4g6n3eh" path="res://ui/sfx/timer_beep.wav" id="7_hanu0"]

[sub_resource type="Animation" id="Animation_n3dua"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["3"]
}

[sub_resource type="Animation" id="Animation_0kmau"]
resource_name = "countdown"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "GO!"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hygx5"]
_data = {
"RESET": SubResource("Animation_n3dua"),
"countdown": SubResource("Animation_0kmau")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
script = ExtResource("1_2eusb")

[node name="HealthBar" parent="." instance=ExtResource("2_7d51a")]
layout_mode = 0
offset_left = 75.0
offset_top = 36.0
offset_right = 365.0
offset_bottom = 77.0

[node name="SuperBar" parent="." instance=ExtResource("3_8pa78")]
layout_mode = 0
offset_left = 75.0
offset_top = 99.0
offset_right = 365.0
offset_bottom = 140.0

[node name="HealthBar2" parent="." instance=ExtResource("2_7d51a")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -365.0
offset_top = 36.0
offset_right = -75.0
offset_bottom = 77.0
grow_horizontal = 0
fill_mode = 1

[node name="SuperBar2" parent="." instance=ExtResource("3_8pa78")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -255.0
offset_top = 99.0
offset_right = 35.0
offset_bottom = 140.0
grow_horizontal = 0
fill_mode = 1

[node name="WinnerAnnouncementText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -755.0
offset_top = 552.0
offset_right = 756.0
offset_bottom = 825.0
grow_horizontal = 2
theme = ExtResource("3_ainlw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.5
offset_top = 20.0
offset_right = 124.5
offset_bottom = 79.0
grow_horizontal = 2
texture = ExtResource("4_xeyvx")

[node name="Indicators" type="HBoxContainer" parent="TimerBackground"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.5
offset_top = -32.0
offset_right = 121.5
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="P1Round2Indicator" parent="TimerBackground/Indicators" instance=ExtResource("6_p4tyy")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
stretch_mode = 5

[node name="P1Round1Indicator" parent="TimerBackground/Indicators" instance=ExtResource("6_p4tyy")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
stretch_mode = 5

[node name="Control" type="Control" parent="TimerBackground/Indicators"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.59

[node name="P2Round1Indicator" parent="TimerBackground/Indicators" instance=ExtResource("6_p4tyy")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
stretch_mode = 5

[node name="P2Round2Indicator" parent="TimerBackground/Indicators" instance=ExtResource("6_p4tyy")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
stretch_mode = 5

[node name="RoundTime" type="Label" parent="TimerBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -22.5
offset_right = 23.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ainlw")
theme_override_colors/font_color = Color(1, 0.717647, 0.0117647, 1)
theme_override_font_sizes/font_size = 37
text = "90"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hanu0")

[node name="StartCountdownLabel" type="Label" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ainlw")
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Countdown" type="AnimationPlayer" parent="StartCountdownLabel"]
libraries = {
"": SubResource("AnimationLibrary_hygx5")
}

[connection signal="animation_finished" from="StartCountdownLabel/Countdown" to="." method="_on_countdown_animation_finished"]
